actualizacion de link
el nuevo link redirige a casa del museo hermanas mirabal

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
     <footer>
       <a 
         id="tribute-link" 
-        href="https://museohermanasmirabal.gob.do/" 
+        href="https://www.cipdh.gob.ar/memorias-situadas/lugar-de-memoria/casa-museo-hermanas-mirabal/" 
         target="_blank">
         Visita el sitio oficial del Museo Hermanas Mirabal
       </a>
